--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
+                                        <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
                                     </li>
                                     <li>
                                         <a href="#"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
