--- a/index_02.html
+++ b/index_02.html
@@ -109,13 +109,13 @@
                                         <a href="#"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
+                                        <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
+                                        <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
                                     </li>
                                 </ul>
                             </li>
