Исправлен Масонри и начат раздел Оплаты

--- a/index_01.html
+++ b/index_01.html
@@ -139,7 +139,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Оплата</a></li>
+                            <li><a href="index_06.html">Оплата</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </div>
@@ -3772,8 +3772,8 @@
                             <div class="title">
                                <a class="palitra"><img src="images/palit.png" alt="silafm"></a>
                                 <h2>Пародисты и актеры</h2></div>
-                            <div>
-                      <h5 style="float:right; margin-right:10px; font-weight:normal; margin-bottom:15px; ">Сортировать по: цене (
+                      <div>
+                      <h5 style="float:right; margin-right:10px; font-weight:normal; margin-bottom:15px;">Сортировать по: цене (
                      <a class="sort_link_7" id="sortlink_bd7" onclick="sort('b7', 'up'); sortlink('sortlink_bd', '7')" style="cursor:pointer;">убыв</a> |
                      <a class="sort_link_7" id="sortlink_bu7" onclick="sort('b7', 'down'); sortlink('sortlink_bu', '7')" style="cursor:pointer;">возр</a>), алфавиту (
                      <a class="sort_link_7" id="sortlink_ad7" onclick="sort('a7', 'up'); sortlink('sortlink_ad', '7')" style="cursor:pointer;">убыв</a> |
@@ -3792,7 +3792,7 @@
                                             <td class="grey">Скачать</td>
                                         </tr>
 
-                                        <tr style="display:none;">
+                                        <tr style="display:none">
                                             <td>1</td>
                                             <td id="a7">2</td>
                                             <td id="c7">3</td>
