--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Оплата</a></li>
+                            <li><a href="index_06.html">Оплата</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </div>
