--- a/index_02.html
+++ b/index_02.html
@@ -119,7 +119,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Оплата</a></li>
+                            <li><a href="index_06.html">Оплата</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </div>
